Implement colonization order

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -604,6 +604,10 @@
                 "title": "Conquête",
                 "description": "La flotte combat pour s'emparer de la planète, et attaquera toute flotte désirant l'en empêcher. La conquête militaire détériorera grandement vos rapports avec la population de cette planète, et aussi avec les propriétaires des flottes l'ayant défendue, surtout si elles étaient neutres vis-à-vis de vous."
             },
+            "colonize": {
+                "title": "Colonisation",
+                "description": "La flotte dépose un groupe de colons sur la planète pour s'y installer et la revendiquer en votre nom. La flotte protègera les colons pendant l'établissement de la colonie contre tout autre prétendant. Si votre flotte arrive durant l'installation d'une autre colonie, celle-ci l'attaquera si la colonie est ennemie."
+            },
             "deliver": {
                 "title": "Livraison",
                 "description": "La flotte effectue une livraison de matériel sur la planète indiquée. La flotte n'attaquera pas d'autres flottes hostiles si elle en croise sur son chemin."
