Implement character class choice at registration

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -590,6 +590,12 @@
         }
     },
     "player": {
+        "classes": {
+            "industrialist": "Industriel",
+            "politician": "Politicien",
+            "strategist": "Stratège",
+            "trader": "Marchand"
+        },
         "titles": {
             "governor": "Gouverneur"
         }
