Fix production skill in profile

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -600,7 +600,7 @@
             "combat": {
                 "title": "Stratégie"
             },
-            "excavation": {
+            "production": {
                 "title": "Excavation"
             },
             "industry": {
